1、Activity启动流程、任务列表显示多个Activity； 2、viewpager2、ConstraintLayout、AndroidX、Android Jetpack、RecyclerView缓存机制 3、MVP模式、Glide原理、单例模式实现方式、HTTPS、内部类加final 4、悲观锁、乐观锁，公平锁、非公平锁

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.1'
 
     //不同产品依赖不同的库
     gradle1Implementation files('libs\\gradle1\\gradle111.jar')
