1、viewpager2、避免内存异常补充； 2、MMKV原理和实践：效率快、增量更新、二进制存储、没有数据丢失的问题； 3、大文件拷贝使用FileChannel零拷贝最快

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     gradle1Implementation files('libs\\gradle1\\gradle111.jar')
     gradle2Implementation files('libs\\gradle2\\gradle222.jar')
 
+    //使用腾讯的 MMKV 替代 SharedPreferences
+    implementation 'com.tencent:mmkv-static:1.2.9'
+
 }
